# Parabola

./: ArrayView.h  CMakeLists.txt  Parabola.h  ParabolaDefinitionReader.h  README.txt  SharedRingBuffer.h  main.cpp
tests/: CMakeLists.txt  testArrayView.cpp  testParabola.cpp  testSharedRingBuffer.cpp
